--- a/stores/posdemos/cloudflared-horustech/fleet.yaml
+++ b/stores/posdemos/cloudflared-horustech/fleet.yaml
@@ -13,10 +13,8 @@ targetCustomizations:
       replicas: 1
       hostNetwork: true
       config:
-        tunnelId: "26f2a8a5-b2f9-4b06-808c-798049b6ef09"
-        credentialsHostPath: "/root/.cloudflared"
-        credentials: ""
-        credentialsFile: ""
+        tunnelId: "26f2a8a5-b2f9-4b06-808c-798049b6ef09.json"
+        credentialsFile: "true"
         ingress:
           - hostname: posdemos-9010.asptienda.com
             service: http://localhost:9010
