Add bundleVersion to fleet.yaml for poslite-db and horustech, ensuring version consistency across deployments.

--- a/stores/posdemos/db/fleet.yaml
+++ b/stores/posdemos/db/fleet.yaml
@@ -10,6 +10,7 @@ targetCustomizations:
     version: 1.0.0
     values:
       nameOverride: "poslite-db"
+      bundleVersion: "1.0.0"
       postgresql:
         timezone: "America/Panama"
         database: poslite
