Update .fleetignore to ignore all files except for the stores directory, refining the deployment process and ensuring only relevant files are included.

--- a/.fleetignore
+++ b/.fleetignore
@@ -1,3 +1,6 @@
-# Excluir plantillas: Fleet no debe crear bundles desde templates/
-# Solo se despliegan los fleet.yaml bajo stores/<id-tienda>/
-templates
+# Ignorar absolutamente todo
+**
+
+# Permitir solo stores/
+!stores/**
+
