Refactor .fleetignore to permit only the stores directory and its contents, simplifying file management for deployment. Remove outdated README.md for tienda-ejemplo to streamline project structure.

--- a/.fleetignore
+++ b/.fleetignore
@@ -1,9 +1,5 @@
 # Ignorar todo
 **
 
-# Permitir la carpeta stores y sus subcarpetas (para poder llegar a los archivos permitidos)
-!stores/
-!stores/*/
-
-# Permitir SOLO fleet.yaml dentro de cada store
-!stores/*/fleet.yaml
+# Permitir solo stores/
+!stores/**
